--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,8 @@
 // imports go first -> grab _vars and any other partials
 @import '_vars';
-@import 'modules/navbar';
+@import 'modules/_navbar';
+
+@import 'modules/_users';
 
 body { 
     background-color: $body-bg;
